plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.rinha'
version = '0.0.1'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.2'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	maxHeapSize = "4g"
	jvmArgs('--add-modules', 'jdk.incubator.vector')
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

tasks.named('bootRun').configure {
	jvmArgs('--add-modules', 'jdk.incubator.vector')
}
